--- a/index.css
+++ b/index.css
@@ -1120,12 +1120,21 @@ margin-bottom: 5%;
 .card .effect-text .inner p {
     color: var(--primary-text-color);
     font-weight: bold;
-    font-size: 0.9rem;
+    font-size: 1rem;
     line-height: 1.4;
     padding: 10px;
     text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
 }
 
+body.dark-mode .card .effect-text .inner p {
+    color: var(--primary-text-color);       
+    font-weight: bold;
+    font-size: 1rem;
+    line-height: 1.4;
+    padding: 10px;                  
+    background: transparent;
+    text-shadow: 1px 1px 3px rgba(0,0,0,1); /* add shadow for readability */
+}
 
 .facility-container {
   display: flex;
